[REFACTOR] 일정 조회시 status에 따라 다르게 조회 (#156)